[gd_scene load_steps=7 format=3 uid="uid://cbpwitupu0t6b"]

[ext_resource type="Script" path="res://game/objects/pill_object.gd" id="1_1bysg"]
[ext_resource type="Texture2D" uid="uid://bllyxuqwynotk" path="res://assets/images/pill-bottle.png" id="1_hjaqx"]
[ext_resource type="Texture2D" uid="uid://c3xla8hbi5et3" path="res://assets/images/cross.png" id="3_1nlqc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pos7w"]
size = Vector2(18, 32)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c0vwe"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_h8ymo"]
radius = 7.0

[node name="PillObject" type="Node2D"]
z_index = 3
position = Vector2(34, 52)
script = ExtResource("1_1bysg")

[node name="BlackBackground" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -267.0
offset_top = -307.0
offset_right = 512.0
offset_bottom = 331.0
mouse_filter = 2
color = Color(0, 0, 0, 0.627451)

[node name="PillSprite" type="Sprite2D" parent="."]
scale = Vector2(0.05, 0.05)
texture = ExtResource("1_hjaqx")

[node name="PillSpriteArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PillSpriteArea2D"]
shape = SubResource("RectangleShape2D_pos7w")

[node name="CurrentRatingDisplay" type="RichTextLabel" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -22.0
offset_top = -39.0
offset_right = 47.0
offset_bottom = -17.0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
bbcode_enabled = true
text = " {0;0}"
fit_content = true
scroll_active = false

[node name="DatabaseAnalysisButton" type="Button" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -33.0
offset_top = -35.0
offset_right = 34.0
offset_bottom = -20.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 5
theme_override_styles/normal = SubResource("StyleBoxFlat_c0vwe")
theme_override_styles/hover = SubResource("StyleBoxFlat_c0vwe")
theme_override_styles/pressed = SubResource("StyleBoxFlat_c0vwe")
theme_override_styles/disabled = SubResource("StyleBoxFlat_c0vwe")
theme_override_styles/focus = SubResource("StyleBoxFlat_c0vwe")
text = "TO_DATABASE"
clip_text = true

[node name="CloseButton" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(46, -27)
scale = Vector2(0.03, 0.03)
texture = ExtResource("3_1nlqc")

[node name="CloseButtonArea" type="Area2D" parent="CloseButton"]
position = Vector2(0, 6.10352e-05)
scale = Vector2(33.3333, 33.3333)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CloseButton/CloseButtonArea"]
shape = SubResource("CircleShape2D_h8ymo")

[connection signal="value_changed" from="." to="." method="_on_value_changed"]
[connection signal="input_event" from="PillSpriteArea2D" to="." method="_on_pill_sprite_area_2d_input_event"]
[connection signal="pressed" from="DatabaseAnalysisButton" to="." method="_on_database_analysis_button_pressed"]
[connection signal="input_event" from="CloseButton/CloseButtonArea" to="." method="_on_close_button_area_input_event"]
